# refriall

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml  shell.py
backend/: urls.py
backend/settings/: base.py
backend/tests/: base.py
backend/utils/: base_paginator.py
finance/: models.py  serializers.py  urls.py  views.py
finance/migrations/: 0008_order_bill.py  0009_remove_bill_matched.py  0012_alter_order_customer_signature_date_and_more.py  0014_alter_order_options.py  0019_merge_20240425_1709.py  0020_alter_order_customer_signature_date.py  0024_alter_itemtimeorder_item.py  0025_alter_order_kit_serial.py  0029_auto_20240909_2123.py  0030_alter_order_options.py
frontend/: .env.sample  .eslintrc.cjs  Dockerfile  cypress.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
hr/: models.py  serializers.py  views.py
hr/migrations/: 0003_alter_provider_activity.py  0008_alter_provider_bank_account.py
hr/tests/: tests_customer_dependency.py
project/: urls.py
project/settings/: base.py
refriall_backend/: .env.sample  .gitignore  Pipfile  compose.yml  docker-compose.yml  manage.py  pyproject.toml
refriall_backend/finance/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
refriall_backend/hr/: models.py  paginators.py  serializers.py  urls.py  views.py
refriall_frontend/: .env.sample  Dockerfile  README.md  package-lock.json  package.json
stock/: admin.py  models.py
(+252 files in other folders)
