[project]
name = ""
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
    "django==5.2",
    "djangorestframework",
    "mysqlclient",
    "django-cors-headers",
    "python-decouple",
    "tzdata",
    "djangorestframework-simplejwt",
    "whitenoise>=6.12.0",
    "gunicorn>=25.3.0 ; sys_platform == 'darwin' or sys_platform == 'linux'",
    "waitress>=3.0.2 ; sys_platform == 'win32'",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
default-groups = "all"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
